wrap stdout, fix queue link, bump version (#34)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,7 @@
 pre {
   margin: 0;
   padding: 5px;
-  display: inline-block;
+  white-space: pre-wrap;
 }
 
 /* Status Colors */
